# hdx-scraper-worldpop

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docker-requirements.txt  eg.txt  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  run.py  run.sh  run_env  setup.sh  test-requirements.txt  worldpop.py
.config/: pre-commit-config.yaml
.github/workflows/: build.yml  publish.yaml
config/: hdx_dataset_static.yml  project_configuration.yaml  project_configuration.yml  smtp_configuration.yml
src/hdx/scraper/worldpop/: __main__.py  aliasdata.py  dataset_generator.py  pipeline.py  sheet.py
src/hdx/scraper/worldpop/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: test_worldpop.py
tests/config/: project_configuration.yaml  project_configuration.yml
tests/fixtures/input/: age-structures-g2-cn-age-2024-100m-iso3-afg.json  age-structures-g2-cn-age-2024-100m.json  age-structures-g2-cn-age-r24b-100m-iso3-afg.json  age-structures-g2-cn-age-r24b-100m.json  age-structures-g2-cn-age-r24b-3a-z-iso3-afg.json  age-structures-g2-cn-age-r24b-3a-z-iso3-kos.json  age-structures-g2-cn-age-r24b-3a-z.json  age-structures-g2-cn-age-r25a-3a-z-iso3-afg.json  age-structures-g2-cn-age-r25a-3a-z-iso3-kos.json  age-structures-g2-cn-age-r25a-3a-z.json  age-structures-g2-uc-age-2024-100m-iso3-afg.json  age-structures-g2-uc-age-2024-100m.json  age-structures-g2-uc-age-r24b-100m-iso3-afg.json  age-structures-g2-uc-age-r24b-100m.json  data.json  pop-g2-cn-pop-2024-100m-iso3-afg.json  pop-g2-cn-pop-2024-100m.json  pop-g2-cn-pop-r24b-100m-iso3-afg.json  pop-g2-cn-pop-r24b-100m-iso3-kos.json  pop-g2-cn-pop-r24b-100m.json  pop-g2-cn-pop-r25a-100m-iso3-afg.json  pop-g2-cn-pop-r25a-100m-iso3-kos.json  pop-g2-cn-pop-r25a-100m.json  pop-g2-uc-pop-2024-100m-iso3-afg.json  pop-g2-uc-pop-2024-100m.json  pop-g2-uc-pop-r24b-100m-iso3-afg.json  pop-g2-uc-pop-r24b-100m.json
