#########################
# Project Configuration #
#########################

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-worldpop"
requires-python = ">=3.13"
dependencies = [
  "hdx-python-api>= 6.5.0",
  "hdx-python-country>= 3.9.6",
  "hdx-python-utilities>= 3.9.1",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/OCHA-DAP/hdx-scraper-worldpop"

[project.optional-dependencies]
test = ["pytest", "pytest-check", "pytest-cov"]
dev = ["pre-commit"]

[project.scripts]
run = "hdx.scraper.worldpop.__main__:main"
